<resources>
    <string name="app_name">Ờ! Phượt</string>
    <string name="facebook_app_id">170591726766978</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loginWithEmail">Login with Email</string>
    <string name="registerWithEmail">Register with Email</string>
    <string name="notification">Notification</string>
    <string name="fillAllData">Please fill out the form</string>
    <string name="wrongFormatEmail">Wrong format email</string>
    <string name="largerThan6Letter">Passwords must be at least 6 characters</string>
    <string name="passwordDoesntMatch">Password dont match</string>
    <string name="numberOfPhone">Phone number must be 10 or 11 characters</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forget password?</string>
    <string name="dontHaveAcount">Dont have account?</string>
    <string name="registerNow">Register now</string>
    <string name="userName">Username</string>
    <string name="phone">Phone number</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="register">Register</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="authenFail">Authentication failed</string>
    <!--Title-->
    <string-array name="nav_item_activity_titles">
        <item>Featured</item>
        <item>Search</item>
        <item>Favorite</item>
        <item>Support</item>
        <item>Message</item>
        <item>My Homestay</item>
        <item>Config</item>
        <item>Help</item>
    </string-array>
    <string name="featured">Featured</string>
    <string name="searchMenuTitle">Search</string>
    <string name="favoriteMenuTitle">Favorite</string>
    <string name="supportMenuTitle">Support</string>
    <string name="messageMenuTitle">Message</string>
    <string name="myHomestayMenuTitle">My Homestay</string>
    <string name="configMenuTitle">Config</string>
    <string name="helpMenuTitle">Help</string>
    <string name="chooseImageOrTakePicture">Choose a photo from the gallery or take a photo</string>
    <string name="chooseImage">Select photo</string>
    <string name="takePicture">Take a photo</string>
    <string name="postImage">Upload photo</string>
    <string name="editProfile">Edit information</string>
    <string name="createHomestay">Create homestay</string>
    <string name="maxPassenger">Maximum number of guests</string>
    <string name="numberBedrrom">Number of bedrooms</string>
    <string name="numberBed">Number of beds</string>
    <string name="numberBathroom">Number of bathrooms</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="timeOpen">Open time</string>
    <string name="timeClose">Close time</string>
    <string name="airCondition">Air-conditioner</string>
    <string name="smoke">Allow smoking</string>
    <string name="tivi">Cable TV</string>
    <string name="wifi">Wifi</string>
    <string name="heater">Heater</string>
    <string name="animal">Pets allowed</string>
    <string name="waterHeater">Machine heater</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="wrongTime">Closing time must be greater than the opening time</string>
    <string name="chooseAtLeast1Image">Please select at least one photo</string>
    <string name="complete">Complete</string>
    <string name="provinceName">Province/city</string>
    <string name="districtName">District</string>
    <string name="address">Address</string>
    <string name="homestayName">Homestay name</string>
    <string name="homestayDes">Description</string>
    <string name="homestayType">Kind of room</string>
    <string name="homestayPrice">Price</string>
    <string name="convenient">Convenient</string>
    <string name="confirmInformation">Verification of Information</string>
    <string name="baseInformation">Basic Information</string>
    <string name="location">Location</string>
    <string name="detail">Detail</string>
    <string name="confirmDeleteHomestay">Are you sure you want to delete this homestay?</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logOut">Log out</string>
    <string name="confirmLogOut">Are you sure</string>
    <string name="loginFirst">Please log in before using this feature!</string>
    <string name="contact">Contact</string>
    <string name="comment">Comment</string>
    <string name="joinAt">As a member from </string>
    <string name="loginOrRegister">Register or Login</string>
    <string name="emailDuplicate">Email has been used, please try again</string>
    <string name="loginFail">Email or password incorrect, please try again</string>
    <string name="aboutMe">Describe yourself</string>
    <string name="enterComment">Enter comment</string>
    <string name="addFavorite">You have added</string>
    <string name="into">to the favorites list</string>
    <string name="deleteFavorite">You deleted</string>
    <string name="outOfFavorite">from favorites list</string>
    <string name="myFavorite">My favorite</string>
    <!--array for spinner-->
    <string-array name="arrType">
        <item>Villa</item>
        <item>Home</item>
        <item>Room</item>
    </string-array>
    <string name="editFavoriteName">Edit the list name</string>
    <string name="deleteFavoriteList">Delete list</string>
    <string name="saveInto">Save as</string>
    <string name="createNewList">Create a new list</string>
    <string name="post">post</string>
    <string name="myFavoriteTitle">Favorite List</string>
    <string name="editFavoriteNameTitle">Change the List Name</string>
    <string name="change">Change</string>
    <string name="createNewFavoriteListTitle">Create a New List</string>
    <string name="createNew">Create new</string>
    <string name="confirmDelete">Are you sure you want to delete this listing??</string>
    <string name="cannotDeleteList">You can not delete this default list</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile">Personal Information</string>
    <string name="placesNearBy">Search around here</string>
    <string name="placesNearByTitle">Search Around Here</string>
    <string name="searchNew">Recent searches</string>
    <string name="placesHot">Famous destination</string>
    <string name="daLat">Đà lạt</string>
    <string name="nhaTrang">Nha Trang</string>
    <string name="daNang">Đà Nẵng</string>
    <string name="saiGon">Sài Gòn</string>
    <string name="haNoi">Hà Nội</string>
    <string name="hoiAn">Hội An</string>
    <string name="vinhHaLong">Vịnh Hạ Long</string>
    <string name="saPa">Sapa</string>
    <string name="canNotGetData">Unable to retrieve data, please try again!</string>
    <string name="reload">Reload</string>
    <string name="GPSTitle">GPS Settings</string>
    <string name="GPSContent">GPS is off, do you want to go to GPS settings?</string>
    <string name="setting">Settings</string>
    <string name="searchByProvinceAndDistrict">Search by province or district</string>
    <string name="searchByProvinceAndDistrictTitle">Search by Province or District</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="search">Search</string>
    <string name="inputMessage">Enter a message...</string>
    <string name="you">You: </string>
    <string name="receiveImage">just got 1 photo</string>
    <string name="sendImage">just sent 1 photo</string>
    <string name="errorWhenSaveImage">There was an error saving the image, please try again!</string>
    <string name="imageSaved">Photo saved</string>
    <string name="accountBlocked">Account locked, please contact admin in the Help section for supporting</string>
    <string name="pressBackAgain">Press back again to exit</string>
    <string name="call">Call</string>
    <string name="facebook">Facebook link</string>
    <string name="sendFeedback">Send feedback to the Admin</string>
    <string name="term">Term of use</string>
    <string name="language">Language</string>
    <string name="defaultLanguage">Default language</string>
    <string name="notificationLower">Information</string>
    <string name="report">Report</string>
    <string name="all">All</string>
    <string name="report1">The information posted is not correct</string>
    <string name="report2">The landlord bothered me</string>
    <string name="report3">Poor facilities</string>
    <string name="report4">The time is not comfortable</string>
    <string name="report5">The place is too noisy</string>
    <string name="reportThisOne">Report this person</string>
    <string name="reportUpper">Report</string>
    <string name="savedReportContent">Your feedback has been acknowledged.</string>
    <string name="fillAtLeastOne">Please fill your selection</string>
    <string name="inputEmailToResetPassword">Please enter email, we will send you instructions to reset your password</string>
    <string name="resetPasswordTitle">Reset Password</string>
    <string name="sendEmailResetSuccess">Send a password reset email successfully, check your Email</string>
    <string name="sendEmailResetFail">Send a password reset email failed, check your Email</string>
    <string name="required">Required</string>
    <string name="notificationComment">Notice of comment</string>
    <string name="noInternet">No internet connection</string>
    <string name="errorWhenSendImage">There was an error saving the image, please try again!</string>
    <string name="retry">RETRY</string>
    <string name="ratingSave">Your rating has been saved</string>
    <string name="excellent">Excellent</string>
    <string name="veryGood">Very good</string>
    <string name="good">Good</string>
    <string name="notBad">Not bad</string>
    <string name="veryBad">Very bad</string>
    <string name="seeRating">See ratings</string>
    <string name="listRating">Rating list</string>
    <string name="nameRequired">You must enter your name before proceeding</string>
    <string name="favoriteNameRequired">You must enter the list name before proceeding</string>
    <string name="homestayDeleted">This homestay has been deleted by the owner</string>
    <string name="termOfUse">Terms of Use</string>
    <string name="your_rating">Your rating</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="send">Send</string>
    <string name="error">Sorry, please try again</string>
    <string-array name="arr_language">
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>
</resources>
