<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_guess"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_best"
            android:icon="@drawable/ic_star"
            android:title="@string/featured" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/searchMenuTitle" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_hobby"
            android:title="@string/favoriteMenuTitle" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/supportMenuTitle" />
    </group>

    <group
        android:id="@+id/group_owner"
        android:checkableBehavior="single">
        <!--<item android:title="Là chủ nhà">-->
        <!--<menu>-->
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/messageMenuTitle" />
        <item
            android:id="@+id/nav_my_post"
            android:icon="@drawable/ic_my_post"
            android:title="@string/myHomestayMenuTitle" />
        <!--</menu>-->
        <!--</item>-->
    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/configMenuTitle" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/helpMenuTitle" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="@string/logOut" />
    </group>

</menu>
